updated resume and included resume with .pdf version

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         <li><a href="#contact">Contact</a></li>
         <li>
           <a href="Resume_AmatyaNahar.docx" download
-            >Resume<i class="fa-solid fa-download"></i
+            >Resume(.docx)<i class="fa-solid fa-download"></i
+          ></a>
+        </li>
+
+        <li>
+          <a href="Resume_AmatyaNahar.pdf" download
+            >Resume(.pdf)<i class="fa-solid fa-download"></i
           ></a>
         </li>
 
@@ -269,9 +275,15 @@
                 ><i class="fab fa-github"></i
               ></a>
             </div>
-            <a href="Resume_AmatyaNahar.docx" download class="btn btn2"
-              >Download My Resume<i class="fa-solid fa-download"></i
-            ></a>
+            <div class="resume">
+              <a href="Resume_AmatyaNahar.docx" download class="resume-btn"
+                >Download My Resume(.docx)<i class="fa-solid fa-download"></i
+              ></a>
+
+              <a href="Resume_AmatyaNahar.pdf" download class="resume-btn lp-5"
+                >Download My Resume(.pdf)<i class="fa-solid fa-download"></i
+              ></a>
+            </div>
           </div>
           <div class="contact-right">
             <form name="submit-to-google-sheet">
