--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amatya Nahar - Work Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
     <script
       src="https://kit.fontawesome.com/302309f970.js"
       crossorigin="anonymous"
