--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </span>
 
       <ul id="sidemenu">
-        <li><a href="#header" id="menu-items">Home</a></li>
+        <li><a href="#header">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
