--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
           <span>
             Full Stack Software Developer <br />
-            [☕ Java | 🌱 Spring Boot | 🅰️ Angular | <br />🐬 MySQL | 🐱 GitHub]
+            [☕ Java | 🌱 Spring Boot | <br />
+            🅰️ Angular | 🐬 MySQL | 🐱 GitHub]
           </span>
         </div>
       </div>
@@ -62,7 +63,7 @@
     <!-- ---------------------------about----------------------------- -->
     <div id="about">
       <div class="container">
-        <div class="row">
+        <div id="about-me" class="row">
           <div class="about-col-1">
             <img
               src="images/amatya_nahar_about_me.png"
@@ -176,6 +177,7 @@
     <div id="services">
       <div class="container">
         <h1 class="sub-title">My Services</h1>
+
         <div class="services-list">
           <div>
             <i class="fa-solid fa-leaf"></i>
