updated small font-size for mobile view

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
           <span>
             Full Stack Software Developer <br />
-            [☕ Java | 🌱 Spring Boot | <br />
-            🅰️ Angular | 🐬 MySQL | 🐱 GitHub]
+            [☕ Java | 🌱 Spring Boot | 🅰️ Angular | <br />🐬 MySQL | 🐱 GitHub]
           </span>
         </div>
       </div>
