adjusted the css for designation and skills

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
           <span class="designation"> Full Stack Software Developer </span>
           <br />
-          [☕ Java | 🌱 Spring Boot | 🅰️ Angular | <br />🐬 MySQL | 🐱 GitHub]
+          <span class="skills">
+            [☕ Java | 🌱 Spring Boot | 🅰️ Angular | <br />🐬 MySQL | 🐱 GitHub]
+          </span>
         </div>
       </div>
     </div>
