updated font-awesome cdn link

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Amatya Nahar - Work Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <script
-      src="https://kit.fontawesome.com/302309f970.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <nav class="nav-mobile">
