updated font-awesome cdn link and changed the id for home-navigation

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <title>Amatya Nahar - Work Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <script
+      src="https://kit.fontawesome.com/302309f970.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <span id="top-section"></span>
     <nav class="nav-mobile">
       <span id="logo">
-        <a href="#header"> <img src="images/logo.png" class="logo" /></a>
+        <a href="#top-section"> <img src="images/logo.png" class="logo" /></a>
       </span>
 
       <ul id="sidemenu">
-        <li><a href="#header">Home</a></li>
+        <li><a href="#top-section">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
