reverted the code of changing the navigation when clicked/pressed on home

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body id="top-section">
+  <body>
     <nav class="nav-mobile">
       <span id="logo">
-        <a href="#top-section"> <img src="images/logo.png" class="logo" /></a>
+        <a href="#header"> <img src="images/logo.png" class="logo" /></a>
       </span>
 
       <ul id="sidemenu">
-        <li><a href="#top-section">Home</a></li>
+        <li><a href="#header">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
