--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="nav-mobile">
       <span id="logo">
-        <a href="#header"> <img src="images/logo.png" class="logo" /></a>
+        <a href="#header"> <img src="images/logo1.png" class="logo" /></a>
       </span>
 
       <ul id="sidemenu">
