added css for buttons

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <li><a href="#contact">Contact</a></li>
         <li>
           <a href="Resume_AmatyaNahar.pdf" download
-            >Resume(.pdf)<i class="fa-solid fa-download"></i
-          ></a>
+            ><i class="fa-solid fa-download"></i>Download Resume(.pdf)</a
+          >
         </li>
         <li>
           <a href="Resume_AmatyaNahar.docx" download
-            >Resume(.docx)<i class="fa-solid fa-download"></i
-          ></a>
+            ><i class="fa-solid fa-download"></i>Download Resume(.docx)</a
+          >
         </li>
 
         <i
@@ -287,13 +287,17 @@
                 ><i class="fab fa-github"></i
               ></a>
             </div>
-            <div class="resume">
-              <a href="Resume_AmatyaNahar.pdf" download class="resume-btn lp-5"
-                >Download My Resume(.pdf)<i class="fa-solid fa-download"></i
-              ></a>
+            <div class="resume tm-20">
+              <a
+                href="Resume_AmatyaNahar.pdf"
+                download
+                class="resume-btn lm-5 tm-10"
+                ><i class="fa-solid fa-download"></i>Download My Resume(.pdf)</a
+              >
               <a href="Resume_AmatyaNahar.docx" download class="resume-btn"
-                >Download My Resume(.docx)<i class="fa-solid fa-download"></i
-              ></a>
+                ><i class="fa-solid fa-download"></i>Download My
+                Resume(.docx)</a
+              >
             </div>
           </div>
           <div class="contact-right">
@@ -310,7 +314,10 @@
                 rows="6"
                 placeholder="Your Message"
               ></textarea>
-              <button type="submit" class="btn btn2">Send Message</button>
+              <button type="submit" class="btn btn2">
+                <i class="fa-solid fa-paper-plane"></i>
+                Send Message
+              </button>
             </form>
             <div id="overlay">
               <div id="spinner"></div>
