--- a/index.html
+++ b/index.html
@@ -294,7 +294,10 @@
                 class="resume-btn lm-5 tm-10"
                 ><i class="fa-solid fa-download"></i>Download My Resume(.pdf)</a
               >
-              <a href="Resume_AmatyaNahar.docx" download class="resume-btn"
+              <a
+                href="Resume_AmatyaNahar.docx"
+                download
+                class="resume-btn lm-5 tm-10"
                 ><i class="fa-solid fa-download"></i>Download My
                 Resume(.docx)</a
               >
