adjusted formatting for button - Download My Resume(.docx)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <nav class="nav-mobile">
       <span id="logo">
@@ -263,11 +264,9 @@
         <div class="row">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
-            <a href="mailto:naharamatya@gmail.com"
-              ><p>
-                <i class="fa-solid fa-envelope"></i>naharamatya@gmail.com
-              </p></a
-            >
+            <a href="mailto:naharamatya@gmail.com">
+              <p><i class="fa-solid fa-envelope"></i>naharamatya@gmail.com</p>
+            </a>
 
             <p><i class="fa-solid fa-phone"></i>+91-78987-84898</p>
             <div class="social-icons">
@@ -298,8 +297,7 @@
                 href="Resume_AmatyaNahar.docx"
                 download
                 class="resume-btn lm-5 tm-10"
-                ><i class="fa-solid fa-download"></i>Download My
-                Resume(.docx)</a
+                ><i class="fa-solid fa-download"></i>Download My Resume(.docx)</a
               >
             </div>
           </div>
