added an copy of button Download My Resume(.pdf) to check UI issue happening in mobile view

--- a/index.html
+++ b/index.html
@@ -292,6 +292,11 @@
                 download
                 class="resume-btn lm-5 tm-10"
                 ><i class="fa-solid fa-download"></i>Download My Resume(.pdf)</a
+              ><a
+                href="Resume_AmatyaNahar.pdf"
+                download
+                class="resume-btn lm-5 tm-10"
+                ><i class="fa-solid fa-download"></i>Download My Resume(.pdf)</a
               >
                <a
                 href="Resume_AmatyaNahar.docx"
