--- a/index.html
+++ b/index.html
@@ -286,23 +286,17 @@
                 ><i class="fab fa-github"></i
               ></a>
             </div>
-            <div class="resume tm-20">
+            <div class="resume">
               <a
                 href="Resume_AmatyaNahar.pdf"
                 download
-                class="resume-btn lm-5 tm-10"
+                class="resume-btn"
                 ><i class="fa-solid fa-download"></i>Download My Resume(.pdf)</a
               ><a
-                href="Resume_AmatyaNahar.pdf"
-                download
-                class="resume-btn lm-5 tm-10"
-                ><i class="fa-solid fa-download"></i>Download My Resume(.pdf)</a
-              >
-               <a
                 href="Resume_AmatyaNahar.docx"
                 download
-                class="resume-btn lm-5 tm-10"
-                ><i class="fa-solid fa-download"></i>Download My Resume(.docx)</a
+                class="resume-btn"
+                ><i class="fa-solid fa-download"></i>Download My Resume(.docs)</a
               >
             </div>
           </div>
