adjusted css margin for mail and banner logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="nav-mobile">
+    <nav class="nav-mobile nav-desktop">
       <span id="logo">
         <a href="#header"> <img src="images/logo1.png" class="logo" /></a>
       </span>
@@ -30,7 +30,7 @@
         </li>
         <li>
           <a href="Resume_AmatyaNahar.docx" download
-            ><i class="fa-solid fa-download"></i>Download Resume(.docx)</a
+            ><i class="fa-solid fa-download"></i>Download Resume(.doc)</a
           >
         </li>
 
