replaced text .docx with .doc to check one UI issue

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </li>
         <li>
           <a href="Resume_AmatyaNahar.docx" download
-            ><i class="fa-solid fa-download"></i>Download Resume(.doc)</a
+            ><i class="fa-solid fa-download"></i>Download Resume(.docx)</a
           >
         </li>
 
@@ -296,7 +296,7 @@
                 href="Resume_AmatyaNahar.docx"
                 download
                 class="resume-btn"
-                ><i class="fa-solid fa-download"></i>Download My Resume(.docs)</a
+                ><i class="fa-solid fa-download"></i>Download My Resume(.doc)</a
               >
             </div>
           </div>
