added css white-space:nowrap to download resume button to check if the issue where the complete text was coming in 2 lines is fixed or not

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 href="Resume_AmatyaNahar.docx"
                 download
                 class="resume-btn"
-                ><i class="fa-solid fa-download"></i>Download My Resume(.doc)</a
+                ><i class="fa-solid fa-download"></i>Download My Resume(.docx)</a
               >
             </div>
           </div>
