modified the css for download resume button in desktop view and banner logo in mobile view

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
             </a>
 
             <p><i class="fa-solid fa-phone"></i>+91-78987-84898</p>
+
             <div class="social-icons">
               <a href="https://www.facebook.com/nahar.amatya" target="_blank"
                 ><i class="fab fa-facebook"></i
@@ -287,16 +288,14 @@
               ></a>
             </div>
             <div class="resume">
-              <a
-                href="Resume_AmatyaNahar.pdf"
-                download
-                class="resume-btn"
+              <a href="Resume_AmatyaNahar.pdf" download class="resume-btn pdf"
                 ><i class="fa-solid fa-download"></i>Download My Resume(.pdf)</a
               ><a
                 href="Resume_AmatyaNahar.docx"
                 download
-                class="resume-btn"
-                ><i class="fa-solid fa-download"></i>Download My Resume(.docx)</a
+                class="resume-btn docx"
+                ><i class="fa-solid fa-download"></i>Download My
+                Resume(.docx)</a
               >
             </div>
           </div>
