--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <div id="contact">
       <div class="container">
-        <div class="row">
+        <div class="row contact-details">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
             <a href="mailto:naharamatya@gmail.com">
