modified the style of designation and skills on Homepage

--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
           </p>
 
           <span class="designation"> Full Stack Software Developer </span>
-          <br />
-          <span class="skills">
+          <div class="skills">
             [☕ Java | 🌱 Spring Boot |<br />
             🅰️ Angular |🐬 MySQL | <br />
             🐱 GitHub]
-          </span>
+          </div>
         </div>
       </div>
     </div>
